# computing

./: .gitignore  .hgignore  README.md  README.txt  launch.desktop  readme.md
Accountant/: .gitignore  Accountant.bat  Accountant.java
Colony/: Site.java
Colour/: Differentiate.java
ComicSpider/: SpiderUtils.java
Euler/: e121_disk.py  e128_hexa.py  e167_ulam.py
Euler/cpp/: CMakeLists.txt
Euler/cpp/problems/: p109.cpp  p111.cpp  p112.cpp  p114.cpp  p141.cpp  p164.cpp  p165.cpp  tprimes.cpp
Euler/cpp/utils/: geom.h  main.cpp  prime.cpp  prime.h  problem.h  rational.h
FirstAndFollow/: All.java  Grammar.java  GrammarException.java  Q1.java  Q2.java  Q3.java
Formless/: Formless.txt  ch1.txt
Ile/: Ile.pro  main.cpp
JavaIsKing/: JIKTest.java  MapFunction.java  ReduceFunction.java
Lua/: AutoPort.java  CheatyPort.java  a.lua  autoMine.lua  b.lua  clockwise.lua  clr.lua  collumn.lua  cook.lua  dig.lua  farm.lua  floor.lua  hBirch.lua  layer.lua  mine.lua  quarry.lua  shaft.lua  trees.lua  wall.lua
MatrixMult/: Mat.java  MatrixMult.java
MyFirstApp/: .gitignore
NetworkEngine/: SharedState.java  Zssr.java
Oracle/: PublicNatives.java
Sec3/: Configure.java  OpenSSLCommander.java  SecureStore.java  Secureify.java  Ssys3.java  Storage.java  install.sh  ssys3.cfg  test.java
Secure/: SBase.java  SecureUtils.java  Ssys2.java  backdoor.sh
SecureFileSystem/: FileServer.java  Josl.java  SecureUtils.java  Test.java  sample.txt  transfer.out
Spaceship/: Spaceship.pro  battlesphere.cpp  battlesphere.h  dialog.cpp  dialog.h  main.cpp  resources.qrc
TagBase/: Gui.java  Main.java  TagBase.java  TagBaseII.java  build.gradle
Test/: Autopres.java  Ball.java  BasicDnD.java  Bibtex.java  BlockSnake.java  CustomDialog.java  Dates.java  DialogDemo.java  FastPrime.java  FileOpen.java  GridRandomer.java  Hello3d.java  KeyEventDemo.java  Logistic.java  PictureBall.java  Position.java  ProgressMonitorDemo.java  QuantumCross.java  RIncr.java  RandomEndless.java  Rdm.java  Robomatic.java  SelfSocket.java  Squirt.java  TreeExample.java  TurtleCover.java  USpiral.java  feed.sh  key.sh  out.tex  penguin.sh
Thaum/: ThaumGraph.java  ThaumPath.java  Thaumview.java  aspects  order.txt  tpath.sh
Timely/: Timely.pro  main.cpp  time.cpp  time.h
Torrent/: PirateBaySpider.java  Result.java
Turtler/: NoisePattern.java
Week2/: Bicycle.cpp  Bicycle.h  Bus.cpp  Bus.h  Car.cpp  Car.h  MotorVehicle.h  Vehicle.h  Week2.pro  main.cpp
alloy/: file system 2.als  file system 4.als  file system 5.als  file system.als
biblio/: CMakeLists.txt  Makefile  bibliography.cpp  bibliography.h  cml.txt  grammar.l  grammar.y  lexer.l  lexer.l.OLD  main.cpp  parser.y  parser.ypp  parser.ypp.OLD  readme.md  scanner.h  scanner.l
biblio/tests/: awful.bib  sample.bib
cAutoMake/: Makefile
canv/: build.gradle  settings.gradle
cmake/: tutorial.cxx
cmake/testing/: CMakeLists.txt  main.cpp
cmake/testing/saucey/: CMakeLists.txt  bar.cpp  opti.cpp
cmake/testing/testsss/: CTestCustom.cmake
coq/: Functions.coq  Functions.v  pascall.v  sdf.v
cparse/: 1.xml  Makefile
csec/: CMakeLists.txt  b64.c  enc.c
ctest/: CMakeLists.txt  Fib.cpp  Makefile  Meta.cpp  T1.cpp  T2.cpp  T3.cpp  TSumo.cpp  TestClass.cpp  TestClass.h  boostgraph.cpp  cl.cpp  cl.h  clmain.cpp  count.cpp  ctest.cbp  function.cpp  inline.cpp  main.cpp  omp.c  pascall.cc  simple.c
cuda/: assist.h  matrixmul.cu  matrixmul.h  matrixmul_gold.cpp
dfc/: .ycm_extra_conf.py  Makefile
djangotest/: db.sqlite3  test.py
ef/: pdfly.sh  timetable.sh
flexyacc/: Makefile  ex1.ypp
freecellize/: build.gradle
gallifreyan/: build.gradle  readme.md
gnuplot/: results.comp.csv  scatter_plot_eg.txt  test.txt
gpu/: Makefile  compile.sh  gpu_sim.c  m1  m2  main.cu  main.cu.old
gpuStream/: Compiler.java  l1.gps  l2.gps
gradleJava/: build.gradle
gradleTest/: build.gradle  settings.gradle
gradletest/: build.gradle
gtk/: gtk  gtk.cbp
hackerrank/: DirectConnections.java
haskell/: assign1-1.lisp  assign1-2.lisp  assignment1.lisp  baby.hs  commandlines.hs  google.hs  guess.hs  helloworld.hs  lambdacalc.hs  primes.hs  server.hs  showoff.hs  simplify.lisp  sorted.hs
icpc/: add_or_mult.cpp  data.txt
inlines/: Makefile  booster.cpp  iters.cpp  main.cpp  meta_utils.h
jTest/: JavaNative.java  Makefile
jsTest/: fblog.js  fbsign.py  gsign.py  hello.js  localStorage.html
lambast/: .gitignore  TRUE  calculator.py  expression.py  genParser.sh  lambast.py  lib.lda  test.py  untyped.g4  untyped_expression.g4  utl.g4  ycomb.lda
latexTest/: eg_beamer.tex  eg_tikz.tex  gnup.tex  main.tex
netc/: CMakeLists.txt  encode.c
old_bin/: xcrypt  yarrr
omp/: .ycm_extra_conf.py  Makefile  dyn.c  omprun.sh  tomp.c  x1.c  x2.c  x3.c  x4.c  x5.c  x6.c  x7.c  x8.c
opencl/: vectorAdd.c
parselet/: parselet.py
personage/: date.cpp  date.h  person.cpp  person.h  personage.pro  student.cpp  student.h
pip/: setup.py
python/: avger.py  client.py  defer  dirclean  google_oauth.py  hexer.py  mkscript  qcross.py  test.py  test2.py  utilzz.py
qt_gui/: dialog.cpp  dialog.h  qt_gui.pro
qt_quick/: main.cpp  qt_quick.desktop  qt_quick.pro  qt_quick_harmattan.desktop
qt_test/: qt_test.pro
recipe/: Kazakhstan.htm  REQS.mdown  potato_cauliflower_gratin.rcp  ratatouille.rcp  test.rcp  tomato_mushroom_pasta.rcp
rtest/: Cargo.toml  test.rs
sdl/: CMakeLists.txt  Makefile  SciTE.properties  lesson17.cpp  lesson20.cpp  lesson36.cpp  readme.txt
sharep/: SharedPointer.h  SharedPointer.pro  Tests.cpp  Tests.h  main.cpp
shell/: lol.sh  unlol.sh
sparse_matrix/: CMakeLists.txt  readme.md
sparse_matrix/include/: dense_bit_matrix.h  matrix.h  meta_utils.h  simple_matrix.h  static_utils.h
sparse_matrix/src/: CMakeLists.txt  regression.cpp
sparse_matrix/test/: CMakeLists.txt  bar.cpp  dense_bit_matrix.cpp  foo.cpp  matrix_tests.h  simple_matrix.cpp  test.cpp
springtest/: build.gradle  settings.gradle
ssysc/: CMakeLists.txt  old.c  secure.cc  secure.hh  ssys.c  ssys.cc  ssys.h
ycm/: CMakeLists.txt  bar.cpp  foo.cpp
ycm/inc1/: bar.h  foo.h
(+513 files in other folders)
